k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcore-admin
  namespace: memcore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcore-admin
  template:
    metadata:
      labels:
        app: memcore-admin
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: memcore-admin
          image: 172.236.254.239:30880/memcore-admin/frontend:main-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: memcore-admin
  namespace: memcore
spec:
  selector:
    app: memcore-admin
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
