k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcore-admin
  namespace: prod-memcore
spec:
  type: NodePort
  selector:
    app: memcore-admin
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31005
